<resources>
    <string name="app_name">HELLO FOOD</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Food Hello</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_register">Đăng ký</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_vn">Email đã đươc đăng ký</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- fragment_detail_order -->
    <string name="fr_detail_order_price">Giá bán</string>
    <string name="fr_detail_order_pro_price">Giá khuyến mại</string>

    <!-- activity sign up -->
    <string name="ac_sign_up_creat_account">Đăng Ký</string>
    <string name="ac_sign_prompt_name">Tên tài khoản</string>
    <string name="ac_sign_prompt_phone_number">Số điện thoại</string>
    <string name="ac_sign_up_name">Tên tài khoản</string>
    <string name="ac_sign_up_email">Email</string>
    <string name="ac_sign_up_password">Mật khẩu</string>

    <!-- fragment_account -->
    <string name="fr_account_name">Tên tài khoản :</string>
    <string name="fr_account_email">Email :</string>
    <string name="fr_account_phone">Số điện thoại :</string>
    <string name="fr_account_money">Tiền nạp :</string>
</resources>
