<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.dathangan.Activity.SignUpActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <AutoCompleteTextView
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_sign_prompt_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <AutoCompleteTextView
                android:id="@+id/sign_up_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_sign_prompt_phone_number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <AutoCompleteTextView
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <AutoCompleteTextView
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_sign_up_account"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/btn_dang_ky"
        android:text="@string/action_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_sign_up_login"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>
