<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBG_1"
    tools:context="com.example.dell.dathangan.Fragment.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fr_account_name"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="40000"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fr_account_email"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr_account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="40000"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fr_account_phone"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr_account_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="40000"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fr_account_money"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr_account_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="40000"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
